fixed issue that caused overflow on first page, project is over

--- a/src/App.scss
+++ b/src/App.scss
@@ -578,7 +578,7 @@ nav {
   .container {
     .front {
       .hi-container {
-        margin-top: 15rem;
+        margin-top: 7rem;
         .auto-typed,
         .declare {
           font-size: 1.25rem;
